# analytics-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  config.yaml.example  pyproject.toml  quickstart.sh
.github/workflows/: ci.yml
backend/src/analytics_agent/: cli.py  config.py  quickstart.py
backend/src/analytics_agent/agent/: analysis.py
backend/src/analytics_agent/api/: settings.py
backend/src/analytics_agent/db/: base.py
backend/src/analytics_agent/demo/: config.demo.yaml  ingest_metadata.py  load_sample_data.py
backend/src/analytics_agent/engines/: factory.py
backend/src/analytics_agent/engines/mcp/: engine.py
backend/src/analytics_agent/engines/sqlalchemy/: engine.py
backend/src/analytics_agent/skills/: datahub_skills.py
connectors/hive/analytics_agent_connector_hive/: server.py
frontend/src/components/Onboarding/: OnboardingWizard.tsx
frontend/src/components/Settings/connections/: GenericMcpForm.tsx  index.ts
frontend/src/components/Settings/connections/plugins/: duckdb.tsx
frontend/src/components/Sidebar/: Sidebar.tsx
scripts/: ingest_metadata.py  load_sample_data.py
tests/e2e/: generic-mcp-form.spec.ts
tests/fixtures/: echo_mcp_server.py
tests/integration/: test_duckdb_e2e.py  test_mcp_transports.py
tests/unit/: test_config.py  test_db_pool_engine.py  test_engine_contract.py  test_mcp_engine.py  test_search_business_context.py  test_settings_wire_format.py
